--- a/Admission.html
+++ b/Admission.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="./css/normalize.css">
    <!-- FontAwesome Library -->
    <link rel="stylesheet" href="./css/all.min.css" >
-  <title>About</title>
+  <title>Admission</title>
 </head>
 <body>
     
